Realign the back to top and fix image

--- a/style.css
+++ b/style.css
@@ -144,7 +144,9 @@ nav ul li a:hover::after {
 
 .iimage {
     transition: transform 0.5s;
-    box-shadow: 5px 10px;
+    box-shadow: 5px 12px;
+    background: linear-gradient(rgba(0,224,254,0.7),rgba(17,7,254,0.7));
+    color: linear-gradient(rgba(0,224,254,0.7),rgba(17,7,254,0.7)); 
     margin-bottom: 8px;
     text-decoration: none;
     z-index: 2;
@@ -378,6 +380,7 @@ nav ul li a:hover::after {
 
 .cont-form {
      background: linear-gradient(rgba(0,224,254,0.7),rgba(17,7,254,0.3));
+     border-radius: 15px;
 
 }
 
@@ -427,6 +430,12 @@ nav ul li a:hover::after {
 
 
 .btt {
+    text-align: center;
+    scroll-behavior: smooth !important;
+    font-family: monospace;
+}
+
+.btt-2 {
     text-align: right;
     scroll-behavior: smooth !important;
     font-family: monospace;
